--- a/Nexus-main/index.html
+++ b/Nexus-main/index.html
@@ -27,7 +27,7 @@
         <!-- Hesap Bölümü -->
         <div class="account">
             <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
-            <a href="giris.html" class="user-icon">
+            <a href="hesap.html" class="user-icon">
                 <div></div>
             </a>
         </div>
