--- a/Nexus-main/gizlilik.html
+++ b/Nexus-main/gizlilik.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gizlilik - YUAME</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
+    
 </head>
 
 <body>
+    <script src="index.js"></script>
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
@@ -27,7 +28,7 @@
         <!-- Hesap Bölümü -->
         <div class="account">
             <button class="account-btn" onclick="window.location.href='giris.html'">Giriş Yap</button>
-            <a href="giris.html" class="user-icon">
+            <a href="hesap.html" class="user-icon">
                 <div><img src="user.png" alt=""></div>
             </a>
         </div>
@@ -54,9 +55,9 @@
                     </div>
                 </div>
                 <nav class="account-nav">
-                    <a href="hesap.html" class="active">Hesap Bilgileri</a>
+                    <a href="hesap.html">Hesap Bilgileri</a>
                     <a href="guvenlik.html">Güvenlik</a>
-                    <a href="gizlilik.html">Gizlilik</a>
+                    <a href="gizlilik.html" class="active">Gizlilik</a>
                 </nav>
             </div>
 
