--- a/Nexus-main/hesap.html
+++ b/Nexus-main/hesap.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hesabım - YUAME</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="hesap.css">
     <script src="index.js"></script>
 </head>
 
@@ -28,7 +27,7 @@
         <!-- Hesap Bölümü -->
         <div class="account">
             <button class="account-btn" onclick="window.location.href='giris.html'">Giriş Yap</button>
-            <a href="giris.html" class="user-icon">
+            <a href="hesap.html" class="user-icon">
                 <div><img src="user.png" alt=""></div>
             </a>
         </div>
