--- a/Nexus-main/index.html
+++ b/Nexus-main/index.html
@@ -153,34 +153,31 @@
                 <div class="search-container">
                     <input type="text" class="search-bar" placeholder="Ara...">
                 </div>
-                <div class="profiles-container">
-                    <!-- Profil kartları buraya gelecek -->
-                    <div class="profile-card">
-                        <div class="profile-image"></div>
-                        <div class="profile-info">
-                            <div class="profile-name">Kullanıcı 1</div>
-                            <div class="profile-status">Çevrimiçi</div>
-                        </div>
-                    </div>
-
-                    <div class="profile-card">
-                        <div class="profile-image"></div>
-                        <div class="profile-info">
-                            <div class="profile-name">Kullanıcı 2</div>
-                            <div class="profile-status">Meşgul</div>
-                        </div>
-                    </div>
-
-                    <div class="profile-card">
-                        <div class="profile-image"></div>
-                        <div class="profile-info">
-                            <div class="profile-name">Kullanıcı 3</div>
-                            <div class="profile-status">Çevrimdışı</div>
-                        </div>
-                    </div>
-
-                    <!-- Diğer profil kartları benzer şekilde devam eder -->
-                    <!-- 4-10 arası profiller için aynı yapıyı tekrarlayın -->
+                <h3>Gündemdeki Konular</h3>
+                <div class="topic-item">
+                    <div class="topic-category">Eğitim · Gündemde</div>
+                    <div class="topic-title">Yeni Eğitim Sistemi</div>
+                    <div class="topic-stats">1.2M gönderi</div>
+                </div>
+                <div class="topic-item">
+                    <div class="topic-category">Teknoloji · Gündemde</div>
+                    <div class="topic-title">Yapay Zeka ve Eğitim</div>
+                    <div class="topic-stats">850K gönderi</div>
+                </div>
+                <div class="topic-item">
+                    <div class="topic-category">Bilim · Gündemde</div>
+                    <div class="topic-title">Uzay Araştırmaları</div>
+                    <div class="topic-stats">500K gönderi</div>
+                </div>
+                <div class="topic-item">
+                    <div class="topic-category">Spor · Gündemde</div>
+                    <div class="topic-title">Olimpiyat Hazırlıkları</div>
+                    <div class="topic-stats">300K gönderi</div>
+                </div>
+                <div class="topic-item">
+                    <div class="topic-category">Kültür · Gündemde</div>
+                    <div class="topic-title">Sanat ve Eğitim</div>
+                    <div class="topic-stats">200K gönderi</div>
                 </div>
             </div>
         </div>
