--- a/Nexus-main/index.html
+++ b/Nexus-main/index.html
@@ -153,7 +153,7 @@
                 <div class="search-container">
                     <input type="text" class="search-bar" placeholder="Ara...">
                 </div>
-                <h3>Gündemdeki Konular</h3>
+                <h3>En Çok Paylaşılanlar</h3>
                 <div class="topic-item">
                     <div class="topic-category">Eğitim · Gündemde</div>
                     <div class="topic-title">Yeni Eğitim Sistemi</div>
