--- a/Nexus-main/sifreunuttum.html
+++ b/Nexus-main/sifreunuttum.html
@@ -7,6 +7,14 @@
     <title>Şifremi Unuttum - YUAME</title>
     <link rel="stylesheet" href="index.css">
 </head>
+<script>
+    // Dark mode check before page load
+    (function () {
+        if (localStorage.getItem('darkMode') === 'enabled') {
+            document.documentElement.classList.add('dark-mode');
+        }
+    })();
+</script>
 
 <body class="login-page forgot-password-page">
     <header class="header">
@@ -25,7 +33,7 @@
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <button class="account-btn" onclick="window.location.href='giris.html'">Giriş Yap</button>
+            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
             <a href="hesap.html" class="user-icon">
                 <div><img src="user.png" alt=""></div>
             </a>
