--- a/Nexus-main/giris.html
+++ b/Nexus-main/giris.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
+<script>
+    // Dark mode check before page load
+    (function () {
+        if (localStorage.getItem('darkMode') === 'enabled') {
+            document.documentElement.classList.add('dark-mode');
+        }
+    })();
+</script>
 
 <body class="login-page">
     <header class="header">
@@ -26,8 +34,8 @@
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <button class="account-btn" onclick="window.location.href='giris.html'">Giriş Yap</button>
-            <a href="giris.html" class="user-icon">
+            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
+            <a href="hesap.html" class="user-icon">
                 <div><img src="user.png" alt=""></div>
             </a>
         </div>
