--- a/Nexus-main/kayit1.html
+++ b/Nexus-main/kayit1.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
+<script>
+    // Dark mode check before page load
+    (function () {
+        if (localStorage.getItem('darkMode') === 'enabled') {
+            document.documentElement.classList.add('dark-mode');
+        }
+    })();
+</script>
 
 <body class="login-page register-page">
     <header class="header">
@@ -18,15 +26,15 @@
 
         <!-- Navbar -->
         <nav class="navbar">
-            <div class="navbar-item"><a href="#anasayfa">Anasayfa</a></div>
-            <div class="navbar-item"><a href="#hakkimizda">Hakkımızda</a></div>
-            <div class="navbar-item"><a href="#hizmetler">Hizmetler</a></div>
-            <div class="navbar-item"><a href="#iletisim">İletişim</a></div>
+            <div class="navbar-item"><a href="index.html">Anasayfa</a></div>
+            <div class="navbar-item"><a href="hakkimizda.html">Hakkımızda</a></div>
+            <div class="navbar-item"><a href="hizmetler.html">Hizmetler</a></div>
+            <div class="navbar-item"><a href="iletisim.html">İletişim</a></div>
         </nav>
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <button class="account-btn" onclick="window.location.href='giris.html'">Giriş Yap</button>
+            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
             <a href="hesap.html" class="user-icon">
                 <div><img src="user.png" alt=""></div>
             </a>
