--- a/Nexus-main/teachers.html
+++ b/Nexus-main/teachers.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
+<script>
+    // Dark mode check before page load
+    (function () {
+        if (localStorage.getItem('darkMode') === 'enabled') {
+            document.documentElement.classList.add('dark-mode');
+        }
+    })();
+</script>
 
 <body>
     <header class="header">
@@ -26,7 +34,7 @@
 
         <!-- Hesap Bölümü -->
         <div class="account">
-            <button class="account-btn" onclick="window.location.href='giris.html'">Giriş Yap</button>
+            <a href="giris.html"><button class="account-btn">Giriş Yap</button></a>
             <a href="hesap.html" class="user-icon">
                 <div><img src="user.png" alt=""></div>
             </a>
@@ -187,9 +195,6 @@
                     <a href="#" class="social-icon">
                         <img src="img/instagram.png" alt="Instagram">
                     </a>
-                    <a href="#" class="social-icon">
-                        <img src="img/linkedin.png" alt="LinkedIn">
-                    </a>
                 </div>
             </div>
 
@@ -217,7 +222,6 @@
             <div class="footer-section">
                 <h3>İletişim</h3>
                 <ul class="footer-contact-info">
-                    <li>Atatürk Caddesi, No: 123, Merkez/İstanbul</li>
                     <li>+90 (212) 345 67 89</li>
                     <li>info@yuame.com</li>
                 </ul>
