Yeni İsim Yeni Başlangıç

--- a/Nexus-main/hizmetler.html
+++ b/Nexus-main/hizmetler.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hizmetlerimiz - YUAME</title>
+    <title>Hizmetlerimiz - Leornova</title>
     <script>
         // Dark mode check before page load
         (function () {
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
@@ -80,7 +80,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-about">
-                <a href="index.html" class="footer-logo">YUAME</a>
+                <a href="index.html" class="footer-logo">Leornova</a>
                 <p>Eğitimde fırsat eşitliği ve kaliteyi artırmak için çalışıyoruz. Öğrenciler ve öğretmenler arasında
                     köprü kurarak, herkes için daha iyi bir eğitim deneyimi sunuyoruz.</p>
                 <div class="footer-social">
@@ -121,13 +121,13 @@
                 <h3>İletişim</h3>
                 <ul class="footer-contact-info">
                     <li>+90 (212) 345 67 89</li>
-                    <li>info@yuame.com</li>
+                    <li>info@leornova.com</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2024 YUAME. Tüm hakları saklıdır.</p>
+            <p>&copy; 2024 LEORNOVA. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
