--- a/Nexus-main/giris.html
+++ b/Nexus-main/giris.html
@@ -4,24 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - YUAME</title>
+    <title>Login - Leornova</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
-<script>
-    // Dark mode check before page load
-    (function () {
-        if (localStorage.getItem('darkMode') === 'enabled') {
-            document.documentElement.classList.add('dark-mode');
-        }
-    })();
-</script>
 
 <body class="login-page">
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
