--- a/Nexus-main/gizlilik.html
+++ b/Nexus-main/gizlilik.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gizlilik - YUAME</title>
+    <title>Gizlilik - Leornova</title>
     <link rel="stylesheet" href="index.css">
 
 </head>
@@ -22,7 +22,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
@@ -58,7 +58,7 @@
                     </div>
                     <br><br>
                     <div class="profile-info">
-                        <h2>Yuame Yuame</h2>
+                        <h2>Leornova Leornova</h2>
                         <p>example@gmail.com</p>
                     </div>
                 </div>
