--- a/Nexus-main/hesap.html
+++ b/Nexus-main/hesap.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hesabım - YUAME</title>
+    <title>Hesabım - Leornova</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
@@ -57,7 +57,7 @@
                     </div>
                     <br><br>
                     <div class="profile-info">
-                        <h2>Yuame Yuame</h2>
+                        <h2>Leornova Leornova</h2>
                         <p>example@gmail.com</p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                     <div class="info-card">
                         <div class="info-group">
                             <label>Ad Soyad</label>
-                            <p>Yuame Yuame</p>
+                            <p>Leornova Leornova</p>
                         </div>
                         <div class="info-group">
                             <label>E-posta</label>
