--- a/Nexus-main/iletisim.html
+++ b/Nexus-main/iletisim.html
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
@@ -64,8 +64,8 @@
                     <div class="info-item">
                         <div>
                             <h3>E-posta</h3>
-                            <p>info@yuame.com</p>
-                            <p>destek@yuame.com</p>
+                            <p>info@leornova.com</p>
+                            <p>destek@leornova.com</p>
                         </div>
                     </div>
                     <div class="info-item">
@@ -123,7 +123,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-about">
-                <a href="index.html" class="footer-logo">YUAME</a>
+                <a href="index.html" class="footer-logo">Leornova</a>
                 <p>Eğitimde fırsat eşitliği ve kaliteyi artırmak için çalışıyoruz. Öğrenciler ve öğretmenler arasında
                     köprü kurarak, herkes için daha iyi bir eğitim deneyimi sunuyoruz.</p>
                 <div class="footer-social">
@@ -164,13 +164,13 @@
                 <h3>İletişim</h3>
                 <ul class="footer-contact-info">
                     <li>+90 (212) 345 67 89</li>
-                    <li>info@yuame.com</li>
+                    <li>info@leornova.com</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2024 YUAME. Tüm hakları saklıdır.</p>
+            <p>&copy; 2024 Leornova. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
