--- a/Nexus-main/index.html
+++ b/Nexus-main/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Anasayfa - Leornova</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
