--- a/Nexus-main/kayit2.html
+++ b/Nexus-main/kayit2.html
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">YUAME</a>
+            <a href="yuame.html">Leornova</a>
         </div>
 
         <!-- Navbar -->
