Yeni İsim Yeni Başlangıç

--- a/Nexus-main/teachers.html
+++ b/Nexus-main/teachers.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Öğretmenlerimiz - YUAME</title>
+    <title>Öğretmenlerimiz - Leornova</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
@@ -21,7 +21,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">Leornova</a>
+            <a href="yuame.html">Learnova</a>
         </div>
 
         <!-- Navbar -->
@@ -182,7 +182,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-about">
-                <a href="index.html" class="footer-logo">YUAME</a>
+                <a href="index.html" class="footer-logo">Learnova</a>
                 <p>Eğitimde fırsat eşitliği ve kaliteyi artırmak için çalışıyoruz. Öğrenciler ve öğretmenler arasında
                     köprü kurarak, herkes için daha iyi bir eğitim deneyimi sunuyoruz.</p>
                 <div class="footer-social">
@@ -223,13 +223,13 @@
                 <h3>İletişim</h3>
                 <ul class="footer-contact-info">
                     <li>+90 (212) 345 67 89</li>
-                    <li>info@yuame.com</li>
+                    <li>info@learnova.com</li>
                 </ul>
             </div>
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2024 YUAME. Tüm hakları saklıdır.</p>
+            <p>&copy; 2024 Learnova. Tüm hakları saklıdır.</p>
         </div>
     </footer>
 
