--- a/Nexus-main/yuame.html
+++ b/Nexus-main/yuame.html
@@ -51,7 +51,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">Leornova</a>
+            <a href="yuame.html">Learnova</a>
         </div>
 
         <!-- Navbar -->
