--- a/Nexus-main/giris.html
+++ b/Nexus-main/giris.html
@@ -13,7 +13,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">Leornova</a>
+            <a href="yuame.html">Learnova</a>
         </div>
 
         <!-- Navbar -->
