--- a/Nexus-main/gizlilik.html
+++ b/Nexus-main/gizlilik.html
@@ -22,7 +22,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">Leornova</a>
+            <a href="yuame.html">Learnova</a>
         </div>
 
         <!-- Navbar -->
