--- a/Nexus-main/sifreunuttum.html
+++ b/Nexus-main/sifreunuttum.html
@@ -20,7 +20,7 @@
     <header class="header">
         <!-- Logo Alanı -->
         <div class="logo">
-            <a href="yuame.html">Leornova</a>
+            <a href="yuame.html">Learnova</a>
         </div>
 
         <!-- Navbar -->
